# deadlock-ml

./: .gitignore  activity.md  app.py  plan.md  pyproject.toml  update_icons.py
lib/: __init__.py  db.py  items.py
ml/: __init__.py  association.py  item_stats.py  markov.py  precompute.py
ml/train/: __init__.py  train_build_path.py  train_counter.py  train_full_build.py  train_win_predictor.py
models/: metadata.json
pages/: 1_Build_Optimizer.py  2_Item_Synergies.py  3_Hero_Stats.py
rust-server/: Cargo.toml
rust-server/src/: db.rs  handlers.rs  main.rs  markov.rs  ml_inference.rs  models.rs  store.rs
rust-server/static/css/: styles.css
rust-server/templates/: base.html  index.html
rust-server/templates/partials/: all_items.html  build_path.html  hero_stats.html  leaderboard.html  match_list.html  next_items.html  synergy_table.html
scripts/: fetch_data.py  fetch_dumps.py  refresh.sh
