[package]
name = "deadlock-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File watching for hot-reload
notify = "7"
notify-debouncer-mini = "0.5"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
thiserror = "2"

# Database
duckdb = { version = "1.0", features = ["bundled"] }

# ML inference
ort = "2.0.0-rc.11"
